--- a/bibliography.bib
+++ b/bibliography.bib
@@ -176,6 +176,22 @@
     pages     = {408-427},
 }
 
+@article{Brassard88,
+    author    = {Brassard, Gilles and Chaum, David and Cr{\'e}peau, Claude},
+    title     = {Minimum Disclosure Proofs of Knowledge},
+    journal   = {J. Comput. Syst. Sci.},
+    volume    = {37},
+    number    = {2},
+    year      = {1988},
+    issn      = {0022-0000},
+    pages     = {156--189},
+    numpages  = {34},
+    url       = {http://oai.cwi.nl/oai/asset/1679/1679A.pdf},
+    doi       = {10.1016/0022-0000(88)90005-0},
+    publisher = {Academic Press, Inc.},
+    address   = {Orlando, FL, USA},
+}
+
 
 @article{Mayers97,
     author  = {Dominic Mayers and Universit\'{e} De Montr\'{e}al},
