--- a/bibliography.bib
+++ b/bibliography.bib
@@ -192,6 +192,16 @@
     address   = {Orlando, FL, USA},
 }
 
+@article{Naor98,
+    author  = {Moni Naor and Rafail Ostrovsky and Ramarathnam Venkatesan and Moti Yung},
+    title   = {Perfect Zero-Knowledge Arguments for NP Using any One-Way Permutation},
+    journal = {Journal of Cryptology},
+    year    = {1998},
+    volume  = {11},
+    pages   = {87--108},
+    url     = {http://www.cs.stevens.edu/~nicolosi/classes/12fa-cs693/midterm/NOVY98:PZK.pdf}
+}
+
 
 @article{Mayers97,
     author  = {Dominic Mayers and Universit\'{e} De Montr\'{e}al},
