--- a/bibliography.bib
+++ b/bibliography.bib
@@ -71,6 +71,13 @@
     url       = {http://www.sci.ccny.cuny.edu/~shpil/secure_comp.pdf},
 }
 
+@inproceedings{bb84,
+    title   = {Quantum cryptography: Public key distribution and coin tossing},
+    author  = {Bennett, Charles H and Brassard, Gilles and others},
+    year    = 1984,
+    url     = {http://www.cs.ucsb.edu/~chong/290N-W06/BB84.pdf},
+}
+
 @inproceedings{Goldreich87,
     author    = {Oded Goldreich and Silvio Micali and Avi Wigderson},
     title     = {How to Play ANY Mental Game},
@@ -128,6 +135,14 @@
     acmid     = {62215},
     publisher = {ACM},
     address   = {New York, NY, USA},
+}
+
+@inproceedings{Crepeau88,
+    author    = {Claude Cr\'{e}peau and Joe Kilian},
+    title     = {Achieving Oblivious Transfer Using Weakened Security Assumptions (Extended Abstract)},
+    year      = {1988},
+    pages     = {42--52},
+    url       = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.39.6379},
 }
 
 @inproceedings{Yao95,
@@ -200,6 +215,32 @@
     volume  = {11},
     pages   = {87--108},
     url     = {http://www.cs.stevens.edu/~nicolosi/classes/12fa-cs693/midterm/NOVY98:PZK.pdf}
+}
+
+@article{Naor91,
+    author  = {Moni Naor},
+    title   = {Bit Commitment Using Pseudo-Randomness},
+    journal = {Journal of Cryptology},
+    year    = {1991},
+    volume  = {4},
+    pages   = {151--158},
+    url     = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.28.1029},
+}
+
+@incollection{Damgard02,
+    author    = {Damg\r{a}rd, Ivan and Nielsen, Jesper Buus},
+    year      = {2002},
+    isbn      = {978-3-540-44050-5},
+    booktitle = {Advances in Cryptology — CRYPTO 2002},
+    volume    = {2442},
+    series    = {Lecture Notes in Computer Science},
+    editor    = {Yung, Moti},
+    doi       = {10.1007/3-540-45708-9_37},
+    title     = {Perfect Hiding and Perfect Binding Universally Composable Commitment Schemes with Constant Expansion Factor},
+    url       = {http://link.springer.com/chapter/10.1007%2F3-540-45708-9_37},
+    publisher = {Springer Berlin Heidelberg},
+    pages     = {581-596},
+    language  = {English}
 }
 
 
