--- a/bibliography.bib
+++ b/bibliography.bib
@@ -286,3 +286,14 @@
     doi     = {http://dx.doi.org/10.1016/S0167-2789(98)00053-0},
     url     = {http://arxiv.org/abs/quant-ph/9711065},
 }
+
+
+@inproceedings{bcjl93,
+    author    = {Brassard, G. and Crepeau, C. and Jozsa, R. and Langlois, D.},
+    booktitle = {Foundations of Computer Science, 1993. Proceedings., 34th Annual Symposium on},
+    title     = {A quantum bit commitment scheme provably unbreakable by both parties},
+    year      = {1993},
+    month     = {Nov},
+    pages     = {362-371},
+    doi       = {10.1109/SFCS.1993.366851},
+}
