--- a/bibliography.bib
+++ b/bibliography.bib
@@ -243,6 +243,36 @@
     language  = {English}
 }
 
+@article{EPR,
+  title     = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author    = {Einstein, A. and Podolsky, B. and Rosen, N.},
+  journal   = {Phys. Rev.},
+  volume    = {47},
+  issue     = {10},
+  pages     = {777--780},
+  numpages  = {0},
+  year      = {1935},
+  month     = {May},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PhysRev.47.777},
+  url       = {http://link.aps.org/doi/10.1103/PhysRev.47.777}
+}
+
+@misc{Lo96,
+    author = {Hoi-Kwong Lo and H. F. Chau},
+    title  = {Is Quantum Bit Commitment Really Possible?},
+    year   = {1996},
+    url    = {http://arxiv.org/abs/quant-ph/9603004},
+}
+
+@techreport{Mayers96,
+    author      = {Dominic Mayers},
+    title       = {The Trouble With Quantum Bit Commitment},
+    institution = {Computing Research Repository (CoRR)},
+    year        = {1996},
+    url         = {http://arxiv.org/abs/quant-ph/9603015},
+}
+
 
 @article{Mayers97,
     author  = {Dominic Mayers and Universit\'{e} De Montr\'{e}al},
@@ -287,6 +317,19 @@
     url     = {http://arxiv.org/abs/quant-ph/9711065},
 }
 
+@article{Hughston93,
+    title   = {A complete classification of quantum ensembles having a given density matrix},
+    journal = {Physics Letters A },
+    volume  = {183},
+    number  = {1},
+    pages   = {14 -- 18},
+    year    = {1993},
+    note    = {},
+    issn    = {0375-9601},
+    doi     = {http://dx.doi.org/10.1016/0375-9601(93)90880-9},
+    url     = {http://www.sciencedirect.com/science/article/pii/0375960193908809},
+    author  = {Lane P. Hughston and Richard Jozsa and William K. Wootters}
+}
 
 @inproceedings{bcjl93,
     author    = {Brassard, G. and Crepeau, C. and Jozsa, R. and Langlois, D.},
@@ -296,4 +339,11 @@
     month     = {Nov},
     pages     = {362-371},
     doi       = {10.1109/SFCS.1993.366851},
+}
+
+@misc{Yuen01,
+    author    = {Horace P. Yuen},
+    title     = {How unconditionally secure quantum bit commitment is possible},
+    year      = {2001},
+    url       = {http://arxiv.org/abs/quant-ph/0109055},
 }
